--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,7 +5,7 @@ sql:
     engine: "postgresql"
     gen:
       go:
-        out: "db"
+        out: "db/sqlc"
         emit_json_tags: true
         emit_prepared_queries: false
         emit_interface: false
